# jian-ai.project

./: .gitignore  Cargo.toml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/migrations/2021-05-31-083857_names/: up.sql
server/src/: main.rs
webpages/: Cargo.toml  index.html  styles.css
webpages/src/: main.rs
webpages/src/components/: base_page.rs  mod.rs  new_tag.rs  photo_list.rs  tagging.rs
webpages/src/eventbus/: tags.rs
webpages/src/pages/: mod.rs  new_tag.rs
