[package]
name = "jian-ai_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.4", default-features = false, features = [
    "rustls",
    "stream",
] }
tokio = { version = "1.8.0", features = ["full"] }
tokio-util = { version = "0.6.7", features = ["codec"] }
futures = { version = "0.3.15" }
