[package]
name = "jian-ai_server"
version = "0.1.0"
authors = ["Magicloud <1886157+Magicloud@users.noreply.github.com>"]
edition = "2021"

[dependencies]
rocket = "*"
chrono = { version = "*", features = ["serde"] }
serde = "*"
diesel = { version = "*", features = ["sqlite", "chrono"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["serve", "json", "diesel_sqlite_pool"]
