[package]
name = "jian-ai_webpages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "*"
web-sys = { version = "*", features = [] }
yew-agent = "*"
yew-router = "*"
anyhow = "*"
serde_json = "*"
percent-encoding = "*"
wasm-logger = "*"
log = "*"
reqwasm = "*"
linked_hash_set = "*"
